Agregado catálogo de perfumes

--- a/drc/index.html
+++ b/drc/index.html
@@ -8,5 +8,12 @@
 <body>
     <h1>Catálogo de Perfumes</h1>
     <p>Bienvenido a la tienda de perfumes.</p>
+
+    <ul>
+        <li>Perfume A - $50</li>
+        <li>Perfume B - $60</li>
+        <li>Perfume C - $70</li>
+    </ul>
 </body>
 </html>
+
