--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
             padding: 20px;
         }
 
+        #buscador {
+            width: 100%;
+            max-width: 400px;
+            padding: 10px;
+            margin: 20px auto;
+            display: block;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
         ul {
             list-style-type: none;
             padding: 0;
@@ -58,13 +68,29 @@
     </header>
 
     <main>
+        <input type="text" id="buscador" placeholder="Buscar perfume...">
+
         <p>Bienvenido a la tienda de perfumes.</p>
 
-        <ul>
+        <ul id="lista-perfumes">
             <li>Perfume A - $50</li>
             <li>Perfume B - $60</li>
             <li>Perfume C - $70</li>
         </ul>
     </main>
+
+    <script>
+        const buscador = document.getElementById('buscador');
+        const lista = document.getElementById('lista-perfumes');
+        const perfumes = lista.getElementsByTagName('li');
+
+        buscador.addEventListener('input', function () {
+            const filtro = this.value.toLowerCase();
+            for (let i = 0; i < perfumes.length; i++) {
+                const texto = perfumes[i].textContent.toLowerCase();
+                perfumes[i].style.display = texto.includes(filtro) ? '' : 'none';
+            }
+        });
+    </script>
 </body>
 </html>
